--- a/src/Pages/LandingPage/Components/style.module.css
+++ b/src/Pages/LandingPage/Components/style.module.css
@@ -68,7 +68,7 @@ body, html {
 .movingGrid > .container > .movingLines > .horz {
 				width: 100%;
 				height: 5px;
-				margin-top: 4.8%;
+				margin-top: 4.5%;
 				background-color: rgb(1, 85, 140);
 				box-shadow: 2px 0 21px rgb(1, 85, 140);
 				animation: lines 800ms linear infinite;
@@ -153,10 +153,10 @@ body, html {
 			height: 100%;
 			transform: rotateZ(4deg);}
 .movingGrid2 > .container > .movingLines > .horz {
-				display: inline-block;
+				/* display: inline-block; */
 				width: 100%;
 				height: 5px;
-				margin-top: 4.8%;
+				margin-top: 4.5%;
 				background-color: rgb(1, 85, 140);
 				box-shadow: 2px 0 21px rgb(1, 85, 140);
 				animation: lines1 800ms linear infinite;
@@ -209,82 +209,18 @@ body, html {
 
 @keyframes lines {
 	from {
-		transform: translateY(-150px);
+		transform: translateY(-8.86vw);
 	}
 	to {
-		transform: translateY(50px);
+		transform: translateY(2vw);
 	}
 }
 @keyframes lines1 {
 	from {
-		transform: translateY(-150px);
+		transform: translateY(-8.86vw);
 	}
 	to {
 		transform: translateY(60px);
-	}
-}
-@-webkit-keyframes lines {
-	from {
-		transform: translateY(-140px);
-	}
-	to {
-		transform: translateY(40px);
-	}
-}
-@-webkit-keyframes lines1 {
-	from {
-		transform: translateY(-150px);
-	}
-	to {
-		transform: translateY(50px);
-	}
-}
-@-moz-keyframes lines {
-	from {
-		transform: translateY(-140px);
-	}
-	to {
-		transform: translateY(40px);
-	}
-}
-@-moz-keyframes lines1 {
-	from {
-		transform: translateY(-150px);
-	}
-	to {
-		transform: translateY(50px);
-	}
-}
-@-ms-keyframes lines {
-	from {
-		transform: translateY(-140px);
-	}
-	to {
-		transform: translateY(40px);
-	}
-}
-@-ms-keyframes lines1 {
-	from {
-		transform: translateY(-150px);
-	}
-	to {
-		transform: translateY(50px);
-	}
-}
-@-o-keyframes lines {
-	from {
-		transform: translateY(-140px);
-	}
-	to {
-		transform: translateY(40px);
-	}
-}
-@-o-keyframes lines1 {
-	from {
-		transform: translateY(-150px);
-	}
-	to {
-		transform: translateY(50px);
 	}
 }
 
