--- a/src/Pages/AboutUs2/Styles/about.module.css
+++ b/src/Pages/AboutUs2/Styles/about.module.css
@@ -41,7 +41,7 @@
   font-style: normal;
   font-weight: 400;
   font-size: 107%;
-  line-height: 150%;
+  line-height: 1.3;
   text-align: center;
 
   color: rgba(223, 223, 223, 0.72);
