--- a/src/Components/Chatbot/chatbot.module.css
+++ b/src/Components/Chatbot/chatbot.module.css
@@ -15,7 +15,7 @@
 }
 
 .icon{
-    font-size: 2.3vh;
+    font-size: 5vh;
     color: rgba(0, 0, 0, 0.87);
 }
 
@@ -31,14 +31,7 @@
     justify-content: center;
     align-items: center;
 }
-.warning{
-    z-index: 10;
-    width: 85vw;
-    height: 85vh;
-    background-color: white;
-    border-radius: 10px;
 
-}
 .modalContent{
     width: 85vw;
     height: 85vh;
@@ -57,4 +50,44 @@
     height: 100%;
     border: none;
     border-radius: 10px;
+}
+
+.warn{
+    font-size: 1.4rem;
+    padding: 5vh;
+    width: 50vw;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.87);
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    
+}
+
+.warn>button{
+    width: 60%;
+    height: 5vh;
+    border: none;
+    border-radius: 10px;
+    background-color: rgb(0, 255, 191);
+    color: rgba(0, 0, 0, 0.87);
+    font-size: 1.2rem;
+    cursor: pointer;
+    margin-top: 2vh;
+}
+@media screen and (max-width: 625px) {
+    .warn{
+        font-size: 1.2;
+    }
+    .warn>button{
+        font-size: 1rem;
+    }
+}
+
+@media screen and (max-width: 522px) {
+    .warn{
+        font-size: 1rem;
+    }
+    .warn>button{
+        font-size: 0.8rem;
+    }
 }
