--- a/src/Pages/AboutUs/components/bg.module.css
+++ b/src/Pages/AboutUs/components/bg.module.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: aboutfont;
+    src: url(../assets/DMMono-Regular.ttf);
+}
 body{
 
     background-color: #1e1e1e;
+    /* font-family: aboutfont; */
 }
 .parent{
     display: flex;
@@ -20,6 +25,7 @@ color:white;
 position: absolute;
 padding-bottom: 40px;
 font-size:15px;
+font-family: aboutfont;
 } 
 
 .left{
@@ -128,7 +134,7 @@ font-size:15px;
         width: 15px;
         height: 15px;
         border-radius: 50%;
-        background-color: blue;
+        background-color: #0078D4;
       }
       .circle2{
         width: 15px;
@@ -144,6 +150,7 @@ font-size:15px;
         left: 0;
         top: 30%;
         transform: translateY(-50%);
+
     }
     
     .rotatedText {
@@ -152,7 +159,70 @@ font-size:15px;
         font-size: 15px;
         color: white;
         margin: 0;
+        font-family: aboutfont;
     }
+    .icon {
+        position: absolute;
+        width: 20px;
+        height: 15px;
+        cursor: pointer;
+        bottom: 7%;
+        left: -0.3%;
+      }
+      
+      .arrow {
+        position: absolute;
+        top: 6.25px;
+        width: 150%;
+        height: 2.5px;
+        background-color: #fff;
+        box-shadow: 0 0.75px 1.25px rgba(0, 0, 0, 0.2);
+        transform: rotate(90deg);
+      }
+      
+      .arrow::after, .arrow::before {
+        content: '';
+        position: absolute;
+        width: 37.5%;
+        height: 2.5px;
+        right: -2px;
+        background-color: #fff;
+      }
+      
+      .arrow::after {
+        top: -3px;
+        transform: rotate(45deg);
+      }
+      
+      .arrow::before {
+        top: 3px;
+        box-shadow: 0 0.75px 1.25px rgba(0, 0, 0, 0.2);
+        transform: rotate(-45deg);
+      } 
+      
+      
+
+.triangle{
+    top : 5px;
+    width: 0; 
+    height: 0; 
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent; 
+    z-index: 2;
+    border-right:10px solid #0078D4; 
+    position: absolute;
+    margin-left:5px ;
+    margin-top: 4px;
+}
+
+.bluetext{
+    position: absolute;
+    bottom: 1%;
+    left: 3.5%;
+    color: #0078D4;
+    font-family: aboutfont;
+}
+
 @media screen and (max-width: 1025px){
     .h1{
         width:96%;
