--- a/src/Pages/Alumni/Style/yearSelector.module.css
+++ b/src/Pages/Alumni/Style/yearSelector.module.css
@@ -7,6 +7,12 @@
   position: fixed;
   top: 10vh;
   right: 20px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .yearButton {
@@ -16,10 +22,10 @@
   border: 2px solid #465058;
   color: #FFFFFF;
   font-family: dmMono;
+  cursor: pointer; 
   display: flex;           
   align-items: center;      
   justify-content: center;  
 }
-
 
 
