--- a/src/Pages/Gallery/components/bg.module.css
+++ b/src/Pages/Gallery/components/bg.module.css
@@ -1,6 +1,15 @@
 @font-face {
     font-family: aboutfont;
     src: url(../assets/DMMono-Regular.ttf);
+
+}
+.p1{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
 body{
 
