--- a/src/Pages/AboutUs/components/bg.module.css
+++ b/src/Pages/AboutUs/components/bg.module.css
@@ -3,16 +3,16 @@
     src: url(../assets/DMMono-Regular.ttf);
 }
 .mainBgContainer{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: -1;
+    z-index: 0;
 }
 body{
 
-    /* background-color: #1e1e1e; */
+    background-color: #1e1e1e;
     font-family: aboutfont;
 }
 .parent{
