--- a/src/Pages/AboutUs/index.module.css
+++ b/src/Pages/AboutUs/index.module.css
@@ -11,3 +11,12 @@ body{
   width: 100%;
   background-color: black;
 }
+
+.wrapper{
+  overflow-x:hidden;
+}
+
+.empty{
+  width:100%;
+  height:100vh;
+}
