--- a/src/Pages/AboutUs/components/bg.module.css
+++ b/src/Pages/AboutUs/components/bg.module.css
@@ -2,13 +2,41 @@
     font-family: aboutfont;
     src: url(../assets/DMMono-Regular.ttf);
 }
+
+.grid{
+    display:grid;
+    place-content:centre;
+    //position: absolute;
+    //overflow:clip;
+    height:100vh;
+    width:100vw;
+}
+
+.peel{
+    height:200vh;
+    width:100vw;
+    grid-area:1/1;
+    z-index:100;
+    background-color:black;
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+    
+    top:0;
+}
+
+.sticky{
+    grid-area:1/1;
+    position: fixed;
+}
+
 .mainBgContainer{
-    position: absolute;
+
+    grid-area:1/1;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
+    width: 100vw;
+    height: 100vh;
+    
 }
 body{
 
