fixed some stuff and added video in about.

--- a/src/Pages/AboutUs/components/bg.module.css
+++ b/src/Pages/AboutUs/components/bg.module.css
@@ -6,8 +6,8 @@
 .grid{
     display:grid;
     place-content:centre;
-    //position: absolute;
-    //overflow:clip;
+    /* position: absolute;
+    overflow:clip; */
     height:100vh;
     width:100vw;
 }
