--- a/src/Pages/Gallery/components/makethon.module.css
+++ b/src/Pages/Gallery/components/makethon.module.css
@@ -11,16 +11,17 @@
 
 
 .page {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  display: flex;
+  flex-direction: column;
   gap: 20px;
   align-items: start;
 }
 
 
+
 .content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
   padding: 60px;
   
 }
@@ -34,12 +35,29 @@
 }
 
 
-.about {
-  font-size: 1.2em;
+.about1 {
+  font-size: 1 em;
   line-height: 1.5;
   margin-bottom: 40px;
   max-width: 800px;
   color: #ffffff;
+  padding-right: 60px;
+}
+.title2{
+  font-size: 3em;
+  font-weight: bold;
+  margin-bottom: 20px;
+  color: aliceblue;
+  padding-left: 70px; 
+
+}
+.about2 {
+  font-size: 1 em;
+  line-height: 1.5;
+  margin-bottom: 40px;
+  max-width: 800px;
+  color: #ffffff;
+  padding-left: 70px;
 }
 
 
@@ -55,7 +73,9 @@
   margin-bottom: 40px;
   padding-bottom: 20px;
   padding-top: 20px;
-  padding-right: 40px;
+  margin-left: 70px;
+  margin-top: 60px;
+
 }
 
 .imageContainer2 {
@@ -64,12 +84,12 @@
   justify-content: center;
   margin-bottom: 40px;
   padding-bottom: 20px;
-  padding-top: 90px;
-  padding-right: 20px;
+  margin-right: 90px;
+  margin-top: 60px;
   
 }
 
-.image1, .image2 {
+.image1 {
   position: relative;
   width: 100%;
   max-width: 499px;
@@ -80,11 +100,15 @@
 }
 
 .image2{
-  width:100%;
-  max-width:459px;
-  left: 35px;
-  height:auto;
-  max-height: 327px;
+  position: relative;
+  width: 100%;
+  max-width: 499px;
+  height: auto;
+  max-height: 297px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.2s;
+ margin-top: 10px;
+ 
 }
 
 .image1:hover, .image2:hover {
@@ -98,6 +122,7 @@
   height: calc(100% - 20px);
   border: 1px solid #ffffff;
   pointer-events: none;
+
 }
 
 
@@ -105,84 +130,149 @@
   top: -20px;
   bottom: 30px;
   left: 40px;
- 
+  margin-right: 50px;
   
 }
 
 
 .border2 {
-  height: calc(100% - 60px);
-  width: calc(100% - 110px);
-  top: 70px;
-  right: 40px;
-  border-bottom-left-radius: 27%;
+  top: 20px;
+  bottom: -30px;
+  right: 60px;
+  margin-left: 50px;
+ 
   
 }
 
 
 
+@media screen and (max-width:1024px) {
 
-@media screen and (max-width: 1024px) {
-
-
-  .content {
-    padding-right: 0;
-    padding-bottom: 20px;
+  .image2{
+    width:100%;
+    margin-right: 25px;
   }
 
-
-  .imageContainer1 {
-    padding-bottom: 10px;
-    padding-top: 30px;
-    right: 25px;
-  
+  .image1{
+    width:100%;
+    margin-left: 25px;
   }
 
-  .imageContainer2 {
-    padding-bottom: 10px;
-    padding-top: 100px;
+  .border2{
+    
+    width: calc(100% - 10px);
+    height: calc(100% - 0px);
+    margin-bottom: 30px;
+    margin-left: 80px;
+    margin-right: -30px;
   }
 
-  .image1,.image2{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+  .border1{
+    width: calc(100% - 10px);
+    height: calc(100% - 50px);
+    margin-top: 30px;
+   
+  }
+}
+
+@media screen and (max-width:768px) {
+  .title2 {
+    font-size: 2.5em;
+    margin-left: 10px
+  }  
+  .title{
+    font-size: 2.5em;
+    margin-right: 40px;
+  }
+  .about1 {
+    font-size: 1em;
+    margin-bottom: 20px;
+  }
+  .about2{
+    margin-left: 20px;
+  }
+  .imageContainer1{
+    margin-top: 40px;
+    
+ }
+  .image1{
+    padding-top: 10px;
+    width:85%;
+
+  }
+  .image2{
+    padding-top: 10px;
+    width:95%;
+    margin-bottom: 10px;
+    margin-left: 20px;
+  }
+  .imageContainer1{
+    height: 150px;
+    width:auto;
+  }
+  .imageContainer2{
+    height: 150px;
+    width:auto;
+  }
+  .border1{
+    width: calc(100% - 30px);
+    height: calc(100% - 50px);
+    margin-top: 30px;
+
+  }
+  .border2{
+      
+    width: calc(100% - 20px);
+    height: calc(100% - 30px);
+    margin-bottom: 30px;
+    margin-left: 80px;
+    margin-right: -30px;
+
+  }
+}
+
+
+
+
+@media screen and (max-width: 620px){
+
+
+  .imageContainer1{
+    margin-top: 40px;
+    
+ }
+  .image1{
+    padding-top: 10px;
+    width:95%;
+    margin-right: 20px;
+    height: auto;
+
+  }
+  .image2{
+    padding-top: 10px;
+    width:75%;
+    margin-right: 20px;
     height: auto;
   }
-
+  .imageContainer1{
+    height: 150px;
+    width:auto;
+  }
+  .imageContainer2{
+    height: 150px;
+    width:auto;
+  }
+ 
   .border1{
     width: calc(100% - 90px);
     height: calc(100% - 20px);
 
   }
-
-  .border2{
-    width: calc(100% - 110px);
-    height: calc(100% - 70px);
-    border-bottom-left-radius: 30%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .title {
-    font-size: 2.5em;
-  }
-
-
-  .about {
-    font-size: 1em;
-    margin-bottom: 20px;
-  }
-
-  border1{
-    width: calc(100% - 90px);
-    height: calc(100% - 100px);
-
-  }
   .border2 {
-    width: calc(100% - 130px);
-    height: calc(100% - 90px);
+    width: calc(100% - 170px);
+    height: calc(100% - 80px);
+    border-bottom-left-radius: 40px;
+    margin-right: 40px;
   }
 
 
@@ -191,10 +281,8 @@
     max-height: none;
   }
 
-  .imageContainer2{
-    padding-top: 100px;
-  }
-}
+};
+  
 
 
 @media screen and (max-width: 480px) {
@@ -208,39 +296,43 @@
   }
 
 
-  .border1, .border2 {
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    left: 0;
-    top: 0;
-    right: 0;
+  .image1{
+    padding-top: 10px;
+    width:45%;
+
   }
-
-
-  .image1, .image2 {
-    width: 100%;
-    max-width: 529px;
-    height: auto;
-    max-height: 327px;
-    position: relative;
+  .image2{
+    padding-top: 10px;
+    width:25%;
   }
-
-
+  .imageContainer1{
+    height: 150px;
+    width:auto;
+    margin-top: 40px;
+  }
+  .imageContainer2{
+    height: 150px;
+    width:auto;
+  }
+  
+  
   .border1 {
     width: calc(100% - 30px);
     height: calc(100% - 60px);
     top: 20px;
     left: 10px;
   }
-
-
+  
+  
   .border2 {
-    width: calc(100% - 20px);
-    height: calc(100% - 60px);
-    top: 20px;
-    right: 30px;
-    left: -20px;
+    width: calc(100% - 100px);
+    height: calc(100% - 80px);
+    top: 70px;
+    right: 50px;
+    left: 50px;
     border-bottom-left-radius: 30%;
+    }
   }
-}
+
+  
+
