--- a/src/Pages/Alumni/Style/scroll.module.css
+++ b/src/Pages/Alumni/Style/scroll.module.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: Sprat;
+    src: url(C:\Users\purni\OneDrive\Desktop\mlscfolder\mlsctiet\src\Pages\Alumni\Assets\zingalalahuhu.otf);
+  }
+ 
 .scrollDiv {
-    background-color: rgb(239, 234, 228);
+    
     width: 92vw;
     overflow-y: scroll;
     -ms-overflow-style: none;
@@ -9,6 +14,68 @@
     top: 60px;
     right: 70px;
 }
+.image{
+    width: 30vw;
+    height: 25vh;
+    z-index: 1;
+    object-fit: fill;
+   
+}
+.meow{border-radius: 12px;
+    display: flex;
+    flex-wrap: wrap;
+    overflow: hidden;
+    z-index: 1;
+    gap: 0;
+}
+
+.Alumnicap{ display: flex;
+    width: 35vw;
+    height:28vh ;
+    background-color: #1e1e1e;
+    border-top-right-radius: 32px;
+    border-bottom-left-radius: 12px;
+    bottom: 28vh;
+    position: relative;
+    
+    
+    z-index: 1;
+}
+
+
+.hl{
+    border: #f4efef 0.25px solid;
+    width: 12vw;
+    height:0;
+    top: 0%;
+    left: 50%;
+    transform: translate(15%, 75%);
+    margin-bottom: -10vh;
+    
+}
+.vl{
+    border-left: #FFF6F6 2px solid;
+    height: 12vh;
+    width:0px;
+    top: 50%;
+    transform: translate(0,  75%);
+    margin-left: -18vw;
+}
+
+
+
+.caption
+{
+    top: 50%;
+    left: 50%;
+    transform: translate(15%, 31%);
+    font-size: 75px;
+    font-family: Sprat;
+    color: #FFF6F6;
+
+}
+
+
 
 .scrollDiv::-webkit-scrollbar {
     display: none;
@@ -36,5 +103,5 @@
 .start{
     width: inherit;
     height: 75vh;
-    background-color: coral;
+    
 }
