--- a/src/Pages/AboutUs/components/projects.module.css
+++ b/src/Pages/AboutUs/components/projects.module.css
@@ -43,7 +43,7 @@
     border-bottom: 2px solid white;
     color: #8f8a84;
     width: 88.5%;
-    margin-left: 67px;
+    margin-left: 75px;
 }
 .projectHeading p{
     font-size: 2.5rem;
@@ -80,4 +80,94 @@
     height: 250px;
     width: 250px;
     border: 2px solid white;
+}
+
+@media screen and (max-width: 1025px){
+    .projectHeading{
+        width: 82.5%;
+    margin-left: 66px;
+    }
+
+}
+@media screen and (max-width: 768px){
+    .projectHeading{
+        width: 77.5%;
+    }
+    .projectHeading p{
+        font-size: 1.5rem;
+    }
+    .projecth p{
+        margin-top: 47px;
+    margin-left: 18px;
+    font-size: 2rem;
+    }
+    .projectimg{
+        height: 150px;
+    width: 150px;
+   
+    margin-left: -8vw;
+    /* margin-bottom: 13vh; */
+    }
+}
+
+@media screen and (max-width: 426px) {
+    .leftSection {
+        display: none;
+    }
+
+    .rightSection {
+        width: 100vw;
+        padding: 0 20px;
+    }
+
+    .projectHeading {
+        width: 100%;
+        margin-left: 0;
+        padding: 10px 0;
+        border-bottom: 1px solid white;
+        cursor: pointer;
+        overflow: hidden;
+        transition: height 0.3s ease;
+        border-top: 1px solid white;
+    }
+
+    .projectHeading p {
+        font-size: 1.2rem;
+        margin: 3px 0;
+        margin-left: 15px;
+    }
+
+    .projecth p {
+        font-size: 2rem;
+        margin: 15px 0;
+    }
+
+    .accordionContent {
+        /* background-color: #333; */
+        color: white;
+        padding: 10px;
+        margin-top: 10px;
+        /* animation: fadeIn 0.3s ease-in-out; */
+        /* height: 50vh; */
+    }
+
+    .active .accordionContent {
+        display: block;
+    }
+
+    @keyframes fadeIn {
+        from { opacity: 0; }
+        to { opacity: 1; }
+    }
+    .projectimage img{
+        border: 1px solid white;
+        margin: 15px;
+        height: 85px;
+        width: auto;
+    }
+    .accordianDiv{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
