--- a/src/Pages/AboutUs/components/bg.module.css
+++ b/src/Pages/AboutUs/components/bg.module.css
@@ -298,20 +298,30 @@ font-family: aboutfont;
     }
     .text{
         left:26px;
-        
+        top: 2vh;
         font-size: 13px;
     }
     .h1{
-        width: 91.5vw;
+        width: 91vw;
+        bottom: 5vh;
     }
     .h2{
-        width: 91.5vw;
+        width: 91vw;
     }
     .h3{
-        width: 91.5vw;
+        width: 91vw;
     }
     .right{
         display: none;
+    }
+    .bluetext{
+        left: 5vh;
+    }
+    .rotatedText{
+        font-size: 13px;
+    }
+    .rotatedTextContainer{
+        left: 0.2vh;
     }
 }
 @media screen and (max-width:320px){
